correction alignement block

--- a/css/style.css
+++ b/css/style.css
@@ -303,14 +303,14 @@ input , input::placeholder {
 
 #lodging > div:nth-child(3) {
     font-weight: bold;
-    margin: 20px 20px;
+    margin: 40px 20px;
 }
 
 
 /* section les + populaires */
 
 #popular {
-    padding: 20px 20px 30px 20px;
+    padding: 20px;
     background-color: var(--grey);
     border-radius: 25px;
     width: 30%;
